server, agent: github app installation clone support (#1242)